manifests/kanban-ui-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-ui
  labels:
    app: kanban-ui
    group: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban-ui
  template:
    metadata:
      labels:
        app: kanban-ui
        group: frontend
    spec:
      containers:
        - name: kanban-ui
          image: cloudattech.jfrog.io/container-repo/kanban-ui:main
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
