manifests/external_db_svc.yml
kind: Service
apiVersion: v1
metadata:
  name: kanban-pgsqldb-ext
spec:
  type: ExternalName
  externalName: kanban-pgsql-db.postgres.database.azure.com
