manifests/kanban-app-backend-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kanan-app-route
spec:
  to:
    kind: Service
    name: kanban-app
